--- a/src/UIKit/Elements/btn/btn.css
+++ b/src/UIKit/Elements/btn/btn.css
@@ -4,6 +4,9 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .btn:hover {
